tests/behavioral/cli/snapshots/behavioral__cli__obsidian_test__obsidian_tags_produces_yaml_frontmatter.snap
---
source: crates/webfang_core/../../tests/behavioral/cli/obsidian_test.rs
expression: redacted
---
---
title: Tagged Page
url: http://127.0.0.1:<PORT>/
date: [DATE]
excerpt: Content with obsidian tags for frontmatter testing.
tags:
- test
---

Content with obsidian tags for frontmatter testing.
