tests/behavioral/cli/snapshots/behavioral__cli__obsidian_test__obsidian_wiki_links_produces_wiki_syntax.snap
---
source: crates/rust_scraper_core/../../tests/behavioral/cli/obsidian_test.rs
expression: redacted
---
---
title: Wiki Links Test
url: http://127.0.0.1:<PORT>/
date: [DATE]
excerpt: Check out this other page for more info. Also see the third page.
---

Check out [[other-page|this other page]] for more info. Also see [[third-page|the third page]].
